--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
         <!-- jquery min js -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
         <!-- ***********************plugin*******************************  -->
+        <!-- Bootstrap js -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
 
         <!-- Main js file -->
